Modified added SettingsActivity, made it so you can access it through MainActivity and added a button that deletes all the songs from the database

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Proiect_Tehnologii_Mobile">
         <activity
+            android:name=".SettingsActivity"
+            android:exported="false" />
+        <activity
             android:name=".AddSongActivity"
             android:exported="false" />
         <activity
