--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.proiect_tehnologii_mobile" >
+    package="com.example.proiect_tehnologii_mobile">
 
     <application
         android:allowBackup="true"
@@ -8,19 +8,31 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Proiect_Tehnologii_Mobile" >
+        android:theme="@style/Theme.Proiect_Tehnologii_Mobile">
+        <activity
+            android:name=".PlaylistsActivity"
+            android:exported="false"
+            android:parentActivityName=".MainActivity"
+            android:label="Playlists"/>
         <activity
             android:name=".AllSongsActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:parentActivityName=".MainActivity"
+            android:label="All Songs"/>
         <activity
             android:name=".SettingsActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:parentActivityName=".MainActivity"
+            android:label="Settings"/>
         <activity
             android:name=".AddSongActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:parentActivityName=".MainActivity"
+            android:label="@string/StringAddSong"/>
         <activity
             android:name=".MainActivity"
-            android:exported="true" >
+            android:exported="true"
+            android:label="Home">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
