--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,21 +2,36 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.proiect_tehnologii_mobile">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
+        android:fullBackupOnly="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Proiect_Tehnologii_Mobile">
         <activity
+            android:name=".SongPlayListActivity"
+            android:exported="false" />
+        <activity
+            android:name=".AddPlaylistActivity"
+            android:exported="false" />
+        <activity
+            android:name=".AddToPlaylistActivity"
+            android:exported="false" />
+        <activity
             android:name=".ModifySongActivity"
-            android:exported="false"
-            android:parentActivityName=".GenericVideoActivity" />
+            android:exported="false" />
         <activity
             android:name=".GenericVideoActivity"
             android:exported="false"
             android:parentActivityName=".AllSongsActivity" />
+        <activity
+            android:name=".GenericPlaylistVideoActivity"
+            android:exported="false"
+            android:parentActivityName=".PlaylistsActivity" />
         <activity
             android:name=".PlaylistsActivity"
             android:exported="false"
